# RealFastAPI

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.generic.yml  docker-compose.pg_mongo.yml  pyproject.toml
realfastapi/: bootstrap.py
realfastapi/config/: .secrets.sample.toml  config.py  settings.toml
realfastapi/core/: events.py
realfastapi/db/: dbconnect.py  mongodb_utils.py
realfastapi/routes/: routes.py
realfastapi/routes/endpoints/: default.py  music.py
tests/: test_realfastapi.py
