[tool.poetry]
name = "RealFastAPI"
version = "0.1.0"
description = ""
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
loguru = "^0.5.1"
uvicorn = "^0.11.5"
motor = "^2.1.0"
pprint = "^0.1"
pymongo = "^3.10.1"
dynaconf = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
